# wit-bindgen

./: .gitignore  Cargo.toml
crates/kotlin/: Cargo.toml
crates/kotlin/src/: lib.rs
crates/kotlin/tests/: codegen.rs
crates/test-helpers/: Cargo.toml
crates/test-helpers/codegen-macro/: Cargo.toml
crates/test-rust-wasm/: Cargo.toml
crates/test-rust-wasm/artifacts/: Cargo.toml
crates/test-rust-wasm/rust-xcrate-test/: Cargo.toml
